Add comprehensive unit tests for mappers and improve null handling
Added extensive unit tests for MapperForGuide, MapperForHabit, MapperForCompletedActivity, MapperForProgressLog, MapperForReminder, and MapperForRole to ensure correct mapping and field handling, including edge cases and invalid input. Improved MapperForGuide toDto method to return null when input is null. Updated pom.xml to enhance test configuration: added mockito-inline, JaCoCo, and modernized Surefire setup for better test coverage and compatibility.